<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Support\Str;

class Department extends Model
{
    protected $fillable = ['name', 'slug'];

    protected static function booted(): void
    {
        static::creating(function (Department $department) {
            $department->slug = Str::slug($department->name);
        });

        static::updating(function (Department $department) {
            $department->slug = Str::slug($department->name);
        });
    }

    public function users(): HasMany
    {
        return $this->hasMany(User::class);
    }
}
