@startuml 09_class_diagram
!define DIRECTION top to bottom
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam class {
    BackgroundColor #F3E5F5
    BorderColor #7B1FA2
}

class User {
    -id: int
    -employee_number: string
    -name: string
    -email: string
    -password: string
    -phone: string
    -position: string
    -department_id: int
    --
    +reportedTickets(): HasMany
    +assignedTickets(): HasMany
    +comments(): HasMany
    +dept(): BelongsTo
    +isStaff(): bool
    +isCustomer(): bool
}

class Ticket {
    -id: int
    -uuid: string
    -user_id: int
    -category_id: int
    -assigned_to: int
    -title: string
    -description: string
    -priority: enum
    -status: enum
    -sla_deadline: datetime
    -rating: int
    --
    +reporter(): BelongsTo
    +category(): BelongsTo
    +assignee(): BelongsTo
    +comments(): HasMany
    +isOverdue(): bool
    +isCancellable(): bool
}

class Comment {
    -id: int
    -ticket_id: int
    -user_id: int
    -message: string
    -is_internal: bool
    -attachments: json
    --
    +ticket(): BelongsTo
    +user(): BelongsTo
}

class Category {
    -id: int
    -name: string
    -slug: string
    -description: string
    --
    +tickets(): HasMany
    +knowledgeBases(): HasMany
}

class Department {
    -id: int
    -name: string
    --
    +users(): HasMany
}

class KnowledgeBase {
    -id: int
    -title: string
    -slug: string
    -content: text
    -is_published: bool
    --
    +category(): BelongsTo
    +author(): BelongsTo
}

class TicketService {
    --
    +createTicket(request, user): Ticket
    +updateTicket(ticket, payload, user): Ticket
    +cancelTicket(ticket, user): Ticket
    +confirmResolution(ticket, user): Ticket
    +rejectResolution(ticket, reason, user): Ticket
    +rateTicket(ticket, user, rating): Ticket
    +getAllTickets(filters, perPage): Paginator
    +getUserTickets(user, filters): Paginator
}

class SawService {
    -criteria: array
    -weights: array
    -types: array
    --
    +calculateScores(): array
    +getScores(): array
    -buildDecisionMatrix(): array
    -normalize(matrix): array
    -weightedSum(normalized): array
}

class TicketPolicy {
    --
    +view(user, ticket): bool
    +create(user): bool
    +update(user, ticket): bool
    +delete(user, ticket): bool
    +comment(user, ticket): bool
    +cancel(user, ticket): bool
}

User "1" -- "*" Ticket : membuat
User "1" -- "*" Ticket : ditugaskan
User "1" -- "*" Comment : menulis
Ticket "1" -- "*" Comment : memiliki
Category "1" -- "*" Ticket : mengkategorikan
Department "1" -- "*" User : memiliki

TicketService --> Ticket : mengelola
TicketService --> SawService : menggunakan
TicketService --> TicketPolicy : memeriksa

@enduml
